fixes broken css link

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,3 +5,9 @@ body {
 h1 {
     color: red;
 }
+
+#nav-rows {
+    display: flex;
+    flex-direction: column !important;
+    border: 1px solid lime;
+}
